--- a/Alunos/appsettings.json
+++ b/Alunos/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+    "DefaultConnection": "Server=GUIGA\\SQLEXPRESS;Database=Alunos;User Id=sa;Password=123123;TrustServerCertificate=True;"
   },
 
     "Logging": {
